# AO-Physics

./: .gitignore  404.html  README.md  build.sh  config.yml  index.html  search.html  sitemap.xml  style.css
AOP/: CMakeLists.txt  aop.cpp
AOP/Lua/: AOP.lua  class.lua
AOP/src/: AWorld.cpp  AWorld.h  Core.h  Helpers.h  Layers.h  Params.h  World.cpp  World.h  WorldState.cpp  WorldState.h
AOP/src/Core/: BodyActivationListener.h  ContactListener.h  Core.h  Layers.h
AOP/src/Creators/: BodyCreator.cpp  BodyCreator.h  ConstraintCreator.cpp  ConstraintCreator.h  WorldCreator.cpp  WorldCreator.h
AOP/src/Managers/: ABodyManager.cpp  ABodyManager.h  ACharacterManager.cpp  ACharacterManager.h  AConstraintManager.cpp  AConstraintManager.h
AOP/src/Types/: ABody.cpp  ABody.h  ACharacter.cpp  ACharacter.h  AConstraint.cpp  AConstraint.h
AOP/src/Types/Constraints/: AConeConstraint.cpp  AConeConstraint.h  AConstraint.cpp  AConstraint.h  ADistanceConstraint.cpp  ADistanceConstraint.h  AFixedConstraint.cpp  AFixedConstraint.h  AGearConstraint.cpp  AGearConstraint.h  AHingeConstraint.cpp  AHingeConstraint.h  APointConstraint.cpp  APointConstraint.h  APulleyConstraint.cpp  APulleyConstraint.h  ASliderConstraint.cpp  ASliderConstraint.h
__archive/: AOPWrapper.lua
assets/: dracula.css  style.css
body/: index.html
character/: index.html
constraint/: index.html
docs/: mkdocs.yml
docs/docs/: body.md  character.md  constraint.md  index.md  lua_module.md  setup.md  unity_renderer.md  world.md
docs/docs/assets/: style.css  vscode.css
docs/docs/examples/: basic.md
docs/site/: 404.html  index.html  search.html
docs/site/body/: index.html
docs/site/character/: index.html
docs/site/constraint/: index.html
docs/site/examples/basic/: index.html
docs/site/search/: search_index.json
docs/site/setup/: index.html
docs/site/world/: index.html
examples/basic/: index.html
inject/: CMakeLists.txt  CMakeListsOld.txt
lua_jolt/: CMakeLists.txt  Core.h  Helpers.h  JoltState.h  l_jolt.cpp
lua_jolt/src/: BodyActivationListener.h  ContactListener.h  Core.h  Helpers.h  Params.h  World.cpp  World.h  WorldState.cpp  WorldState.h
lua_module/: index.html
search/: search_index.json
setup/: index.html
tests/: AOPNEW.lua  AOPWrapper.lua  jolt.json  old.lua  package.json  physics.test.js  test.lua
tests-loader/: package.json  physics.test.js  simulated_world_state.json  simulation.lua  test.lua
tests-loader/loader/: index.cjs  index.d.cts
tests/Scenarios/: BodyForces.lua
unity_renderer/: index.html
world/: index.html
